--- a/lang-ui/src/main/resources/public/index.html
+++ b/lang-ui/src/main/resources/public/index.html
@@ -14,6 +14,7 @@
     <script src="js/jquery-2.2.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/tinymce/tinymce.min.js"></script>
+    <script src="js/chart.js"></script>
     <script src="js/app.js"></script>
 
 </head>
@@ -26,7 +27,8 @@
     </div>
     <div><button id="bt-run" type="button" class="btn btn-success btn-lg">Выполнить</button></div>
     <div style="clear: both;"></div>
-    <div id="error-container" class="alert alert-danger" role="alert">Ошибка</div>
+    <div id="error-container" class="alert alert-danger" role="alert"><span id="error-text"></span></div>
+    <div id="plot-container"><canvas id="my-plot" width="200" height="200"></canvas></div>
 </div><!-- /.container -->
 
 </body>
