--- a/lang-ui/src/main/resources/public/index.html
+++ b/lang-ui/src/main/resources/public/index.html
@@ -23,12 +23,20 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6"><b>Программа:</b><br /><textarea id="codeEditor"></textarea></div>
-        <div class="col-md-6"><b>БНФ:</b><br /><textarea id="bnf-area" class="form-control" rows="17" readonly></textarea></div>
+        <div class="col-md-6">
+            <div id="bnf-container">
+                <b>БНФ:</b>
+                <br />
+                <textarea id="bnf-area" class="form-control" rows="17" readonly></textarea>
+            </div>
+            <div id="plot-container">
+                <canvas id="my-plot" width="200" height="200"></canvas>
+            </div>
+        </div>
     </div>
     <div><button id="bt-run" type="button" class="btn btn-success btn-lg">Выполнить</button></div>
     <div style="clear: both;"></div>
     <div id="error-container" class="alert alert-danger" role="alert"><span id="error-text"></span></div>
-    <div id="plot-container"><canvas id="my-plot" width="200" height="200"></canvas></div>
 </div><!-- /.container -->
 
 </body>
